gap fix

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 50px;
+  gap: 35px;
   flex: 1;
 }
 
